--- a/adminpanel/src/main/res/layout/activity_login.xml
+++ b/adminpanel/src/main/res/layout/activity_login.xml
@@ -89,6 +89,7 @@
         android:layout_marginEnd="40dp"
         android:background="@drawable/custom_editview"
         android:drawableStart="@drawable/password_icon"
+        android:drawableEnd=""
         android:drawablePadding="15dp"
         android:fontFamily="@font/yatraone_regular"
         android:hint="Password"
@@ -97,6 +98,7 @@
         android:paddingEnd="15dp"
         android:paddingBottom="15dp"
         android:textSize="16sp"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/loginActivityEmailEditText" />
