--- a/adminpanel/src/main/res/layout/activity_login.xml
+++ b/adminpanel/src/main/res/layout/activity_login.xml
@@ -63,7 +63,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="40dp"
         android:background="@drawable/custom_editview"
         android:drawableStart="@drawable/email_icon"
@@ -80,29 +79,57 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/loginActivityAppLoginTitleText" />
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/loginActivityPasswordEditText"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/loginActivityPasswordLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="40dp"
+        android:paddingTop="1dp"
         android:background="@drawable/custom_editview"
-        android:drawableStart="@drawable/password_icon"
-        android:drawableEnd=""
-        android:drawablePadding="15dp"
-        android:fontFamily="@font/yatraone_regular"
-        android:hint="Password"
-        android:paddingStart="30dp"
-        android:paddingTop="15dp"
-        android:paddingEnd="15dp"
-        android:paddingBottom="15dp"
-        android:textSize="16sp"
-        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/loginActivityEmailEditText" />
+        app:layout_constraintTop_toBottomOf="@id/loginActivityEmailEditText">
 
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/loginActivityPasswordEditText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:drawableStart="@drawable/password_icon"
+            android:drawablePadding="15dp"
+            android:fontFamily="@font/yatraone_regular"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginStart="30dp"
+            android:paddingEnd="5dp"
+            android:textSize="16sp"
+            android:layout_marginEnd="50dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/loginActivityShowPasswordButton"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:clickable="true"
+            android:focusable="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/loginActivityPasswordEditText"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/password_hidden_icon" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <TextView
         android:id="@+id/loginActivityContinueText"
         android:layout_width="wrap_content"
@@ -114,7 +141,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/loginActivityPasswordEditText" />
+        app:layout_constraintTop_toBottomOf="@id/loginActivityPasswordLayout" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/loginActivityGoogleButton"
