--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -52,7 +52,7 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="2dp"
                 android:fontFamily="@font/yatraone_regular"
-                android:text="Insha Allah"
+                android:text="Hello"
                 android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@+id/historyFragmentRecentBuyFoodImage"
                 app:layout_constraintTop_toTopOf="@+id/historyFragmentRecentBuyFoodImage" />
@@ -65,7 +65,7 @@
                 android:alpha="0.8"
                 android:fontFamily="@font/yatraone_regular"
                 android:singleLine="true"
-                android:text="Allah Hu Akbar"
+                android:text="Hi"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toStartOf="@+id/historyFragmentRecentBuyButton"
                 app:layout_constraintStart_toStartOf="@+id/historyFragmentRecentBuyFoodName"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
                 android:fontFamily="@font/yatraone_regular"
-                android:text="Rs.72"
+                android:text="Rs.100"
                 android:textColor="@color/accent_color"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="@id/historyFragmentRecentBuyFoodImage"
