--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,15 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".fragment.ProfileFragment">
 
+    <TextView
+        android:id="@+id/profileFragmentEditDetailsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/yeonsung_regular"
+        android:text="Edit your information"
+        android:textColor="@color/accent_color"
+        android:textSize="20sp"
+
+        app:layout_constraintEnd_toEndOf="@+id/profileFragmentNameLayout"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/profileFragmentNameLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/profileFragmentEditDetailsButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="6dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/custom_editview"
         android:orientation="horizontal"
@@ -26,7 +39,7 @@
         android:textSize="20sp">
 
         <TextView
-            android:id="@+id/orderActicityNameText"
+            android:id="@+id/profileFragmentNameText"
             android:layout_width="85dp"
             android:layout_height="match_parent"
             android:fontFamily="@font/lato_bold"
@@ -35,7 +48,7 @@
             android:textSize="20sp" />
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/orderActivityUserPhoneNumber"
+            android:id="@+id/profileFragmentNameEditText"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -75,7 +88,7 @@
             android:textSize="20sp" />
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/profileFragmentNameLayoutUserAddress"
+            android:id="@+id/profileFragmentAddressEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -116,13 +129,13 @@
             android:textSize="20sp" />
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/profileFragmentNameLayoutUserEmail"
+            android:id="@+id/profileFragmentEmailEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/lato_regular"
             android:hint="Your Email"
-            android:inputType="textMultiLine"
+            android:inputType="textNoSuggestions|textMultiLine"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:textSize="14sp" />
@@ -156,7 +169,7 @@
             android:textSize="20sp" />
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/profileFragmentNameLayoutUserPhoneNumber"
+            android:id="@+id/profileFragmentPhoneNumberEditText"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
